--- a/mirror/멜로(데스노트).md
+++ b/mirror/멜로(데스노트).md
@@ -337,9 +337,8 @@ A%A4%EB%85%B8%ED%8A%B8%29?action=edit&section=9)]
 [매트](%EB%A7%A4%ED%8A%B8%28%EB%8D%B0%EC%8A%A4%EB%85%B8%ED%8A%B8%29.md)와 수사를
 시작한다.`[19]`그리고 매트를 단독 테러범으로 꾸며 시선을 끄는 동안`[20]`자신이 경호원인 척 하고 키요미를 납치한다. 하지만
 키요미는 전에 라이토가 가진 니아와 멜로의 초상화를 본 적이 있어서 한눈에 멜로를 알아본다.  
-멜로는 키요미를 택배 트럭에 태운 후 모포를 줄 테니 옷을 벗으라고 한다.`[21]` 그리고 옷뿐만 아니라 소지품까지 모두 압수한 후
-버렸는데, 이는 키요미가 달고 다니는 발신장치 때문에 호위에게 추적당하는 것을 막기 위해서였다. 하지만 키요미가 속옷 속에 감춰둔 노트조각을
-발견하지 못한 탓에 인해 끝내 살해당하고, 키요미 또한 분신자살의 형태로 살해당하는 탓에 죽고 나서도 신원 미상으로 남게 된다.
+멜로는 키요미를 택배 트럭에 태운 후 모포를 줄 테니 옷을 벗으라고 한다. 그리고 옷뿐만 아니라 소지품까지 모두 압수한 후
+버렸는데, 이는 키요미가 달고 다니는 발신장치 때문에 호위에게 추적당하는 것을 막기 위해서였다. 하지만 키요미가 속옷 속에 감춰둔 노트조각을 발견하지 못한 탓에 인해 끝내 살해당하고, 키요미 또한 분신자살의 형태로 살해당하는 탓에 죽고 나서도 신원 미상으로 남게 된다.
 
   
 
@@ -353,8 +352,7 @@ A%A4%EB%85%B8%ED%8A%B8%29?action=edit&section=10)]
 마지막에 [타카다키요미](%ED%83%80%EC%B9%B4%EB%8B%A4%20%ED%82%A4%EC%9A%94%EB%AF%B8.md)를 납치하는 협력
 아닌 협력으로 [야가미라이토](%EC%95%BC%EA%B0%80%EB%AF%B8%20%EB%9D%BC%EC%9D%B4%ED%86%A0.md)를 잡는데 크게
 공헌한다. 이것이 그 때까지 라이토가 진행하고 있던 시나리오를 무너지게 만드는 결정적 원인이 되었다. 사실 이게 아니라도 처음 멜로의
-행동으로 니아가 키라의 윤곽을 대폭 좁힐 수 있었으니 키라 파멸에 대한 공헌도는 대단히 높은 셈. 니아도 멜로의 행동이 없었다면 키라를 잡을
-수 없었을 것이라고 한다.`[22]` 대신 자신은 어이없게 키요미에 의해 데스노트의 희생양이 되었지만.. `[23]`
+행동으로 니아가 키라의 윤곽을 대폭 좁힐 수 있었으니 키라 파멸에 대한 공헌도는 대단히 높은 셈. 니아도 멜로의 행동이 없었다면 키라를 잡을수 없었을 것이라고 한다.`[21]` 대신 자신은 어이없게 키요미에 의해 데스노트의 희생양이 되었지만.. `[22]`
 
 [[edit](http://rigvedawiki.net/r1/wiki.php/%EB%A9%9C%EB%A1%9C%28%EB%8D%B0%EC%8
 A%A4%EB%85%B8%ED%8A%B8%29?action=edit&section=11)]
@@ -372,13 +370,13 @@ A%A4%EB%85%B8%ED%8A%B8%29?action=edit&section=11)]
 의도한 바가 아니었다고는 하지만, 멜로를 추적하는 과정에서 일어난 미 대통령의 죽음과 마피아 조직의 괴멸로 인해 미국이 키라에게 굴복해
 버리면서 가뜩이나 키라의 지지가 높아진 전 세계가 완전히 키라에게 기울어져 버렸던 것. 이 때문에 SPK나 일본수사본부나 키라를 추적하는데
 심각하게 제약을 받아 단순히 기밀 조직을 넘어 어둠 속 조직으로 전락하고 말았으며, 니아가 말한 대로 키라의 정체를 세간에 밝히는 게 도리어
-자살 행위`[24]`인 지경에 이르고 말았다. 엔딩에서 키라에 대한 모든 것이 진실을 아는 극소수 인물들의 침묵 속에 은폐되는 형태로 일이
-마무리된 것도 이 때문.`[25]`
+자살 행위`[23]`인 지경에 이르고 말았다. 엔딩에서 키라에 대한 모든 것이 진실을 아는 극소수 인물들의 침묵 속에 은폐되는 형태로 일이
+마무리된 것도 이 때문.`[24]`
 
   
 
 니아에 비해 미칠듯한 행동력, 과하다 싶을 정도의 행동력으로 키라 수사에 임하며 수단 방법을 가리지 않았다. 그 죄질을 법으로 따지면
-마츠다의 말마따나 사형은 따놓은 당상.`[26]` L의 원수인 키라를 붙잡고자 하는, 니아를 제치고 자신이 최고가 되고 싶었던 열망이 이러한
+마츠다의 말마따나 사형은 따놓은 당상.`[25]` L의 원수인 키라를 붙잡고자 하는, 니아를 제치고 자신이 최고가 되고 싶었던 열망이 이러한
 행동들의 동기였다. L이나 니아, 라이토와 비해 상대적으로 두뇌 쪽으론 떨어지는 감이 있는듯 하나 위에 언급한 대로 수단 방법 가리지 않는
 만큼 행동력 부분이 강점이라 할수 있다. 허나 니아의 평에 의하면 항상 감정적이라 실수를 저지르는 경우가 많다고. 하지만 멜로 역시 천재들을
 키우는 와미즈 출신이라는 걸 잊으면 안 된다. L이나 니아에겐 뒤처질지 몰라도 일반인에 비해선 압도적. 그가 마피아 세계에서 바닥부터 시작해
@@ -392,9 +390,9 @@ A%A4%EB%85%B8%ED%8A%B8%29?action=edit&section=12)]
 # 4. 외전에서 ¶
 
 [니시오 이신](%EB%8B%88%EC%8B%9C%EC%98%A4%20%EC%9D%B4%EC%8B%A0.md)이 쓴 데스노트 외전 소설
-[데스노트 어나더 노트 로스앤젤레스 BB 연속 살인사건](%EB%8D%B0%EC%8A%A4%EB%85%B8%ED%8A%B8%20%EC%96%B4%EB%82%98%EB%8D%94%20%EB%85%B8%ED%8A%B8%20%EB%A1%9C%EC%8A%A4%EC%95%A4%EC%A0%A4%EB%A0%88%EC%8A%A4%20BB%20%EC%97%B0%EC%86%8D%20%EC%82%B4%EC%9D%B8%EC%82%AC%EA%B1%B4.md)에서는 화자로 등장. 멜로가 유언삼아 적은 글이라는 설정인데 문장력이 매우 뛰어나다. `[27]`여성의 섬세한
+[데스노트 어나더 노트 로스앤젤레스 BB 연속 살인사건](%EB%8D%B0%EC%8A%A4%EB%85%B8%ED%8A%B8%20%EC%96%B4%EB%82%98%EB%8D%94%20%EB%85%B8%ED%8A%B8%20%EB%A1%9C%EC%8A%A4%EC%95%A4%EC%A0%A4%EB%A0%88%EC%8A%A4%20BB%20%EC%97%B0%EC%86%8D%20%EC%82%B4%EC%9D%B8%EC%82%AC%EA%B1%B4.md)에서는 화자로 등장. 멜로가 유언삼아 적은 글이라는 설정인데 문장력이 매우 뛰어나다. `[26]`여성의 섬세한
 심리묘사까지 그럴듯하게 해내고 있다. 감정묘사가 적은 편이었던 원작과 달리, 여기서는 그가 L을 얼마나 신봉했는지 <del>그리고 니아와
-라이토를 얼마나 싫어했는지</del>`[28]`뚜렷하게 드러나 있다. L과 직접 만나서 그에게서 그가 해결한 몇몇 사건을 들었다고 하는데
+라이토를 얼마나 싫어했는지</del>`[27]`뚜렷하게 드러나 있다. L과 직접 만나서 그에게서 그가 해결한 몇몇 사건을 들었다고 하는데
 L과의 만남 과정은 자신의 소중한 기억이므로 절대 말하지 않겠다고 한다든지, 니아가 이 노트를 읽고 그가 모르는 L을 자신이 알고 있었음을
 통감하면 좋겠다느니..
 
@@ -445,12 +443,11 @@ _eb_8d_b0_ec_8a_a4_eb_85_b8_ed_8a_b8_29/eeee.jpg)
   * `[18]` 여담으로 완전결착판에서는 사유의 납치부터 소이치로의 죽음, 키라 신도의 SPK 습격같은 2기 초반부 대형 사건들이 생략되었다. 당연히 멜로가 니아에게 정보를 제공하는 것도 삭제됬고 멜로는 타카다의 납치때만 본 모습을 드러낸다. 안습
   * `[19]` 원작에선 공항에 있는 모기와 미사를 모고 매트가 둘을 놓친 걸 알고 바로 일본으로 쫓아왔지만 애니판에선 이부분도 또 잘렸다. 그냥 어느 새 일본으로 들어왔다는 설정이다(...).
   * `[20]` 이때 매트가 잡혀도 생포 정도로 끝나리라 생각했지만 광분한 키라 신도들의 행동을 예측하지 못한 탓에 살해당하게 된다.
-  * `[21]` 농담으로 팬들 사이에선 절세미인인 타카다를 알몸으로 만들어놓고 덮치지 않은 멜로를 고자로 칭송(?)했다. **덮칠 리가 있냐!** <del>니아가 보고 있었다고는 하지만 더 미녀에 해당하는 할 리드너도 덮치지 않았다. 할 리드너의 경우에는 스스로 알몸이 된 상태로 유혹까지 했는데. 키요미를 안 덮치는 게 오히려 당연하다.</del> 또한 야가미 사유 납치 때와 달리 팬들의 비난이 적은 편이었다. 일반인인 사유와 달리 타카다는 적극적으로 키라와 관련된 인물이라서인 듯.
-  * `[22]` 그러나 멜로의 마지막 행동이 그 자신의 어떤 계산에서 비롯된 것인지는 분명하지 않다. "내가 할 수밖에 없다."고 말한 것 등을 보면 키라의 파멸을 위해 자신을 희생한 듯 보이기도 하지만, 멜로의 그간 행적을 보면 '니아를 위해 승리를 양보한다'거나, '키라를 어떤 정의 차원에서 반드시 잡아야 한다'고 여기는 캐릭터가 전혀 아니다. 니아는 '타카다를 통해 키라에 접근하기 위한 목적일 것'이라고 리드너에게 말했지만 확실히 알 수는 없다.
-  * `[23]` 이름을 이미 알고 있는 키요미에게 아무 생각 없이 얼굴을 보였다. 게다가 키요미가 몰래 가지고 있었던 데스노트 조각을 미처 발견하지 못했다. 애초에 본명이 일찍 드러난 상황이다 보니 언젠간 사망할 운명이긴 했다.
-  * `[24]` 지금 세간에 키라가 누구인지 밝혀도 대부분이 그의 편을 들 것이며, 그렇게 되면 니아 자신도 방치되어도 상관없는 존재가 되어버린다는 것.
-  * `[25]` 물론 데스노트가 미치는 파급력을 생각하면 애초부터 세간에 공표하거나 규명할 성질은 못 되었으나, 적어도 국가 상층부와 공모하여 정책 차원의 향후 수습은 가능했다. 실제 히구치 체포 시점까진 이런 방향으로 나아가려 했다.
-  * `[26]` 이런 지나친 행동 때문에 니아나 라이토 모두 한 때 멜로가 단순히 키라를 잡으려는 게 아니라 키라를 꺾고 그 자리를 거머쥐어 세계의 정점에 서려는 게 아닌가 여기기도 했다. 게다가 일본수사본부가 멜로와 접선했다는 이유 하나만으로 초반에 니아를 대놓고 안 믿으려 하는 등 초반의 멜로는 니아에게 있어서 전형적인 양날의 검이었다.
-  * `[27]` 스스로 '구세계의 들러리, 개죽음을 당한 베스트 드레서'라고 자조한다. 자신의 인생에 대해서도 '좋은 추억이자 나쁜 꿈이었다'는 모호한 표현을 쓰는데 스스로도 자기 인생이 만족스럽지 않었던 듯하다. 하긴 생각해 보면 작중 행적은 키라들과 비슷한 수준으로 악질적인데 행복했다고 하면 그건 그것대로 문제있다(...)
-  * `[28]` 니아는 대가리 큰 니아 새끼'(...) 키라는 '깝죽대는 살인마' 'L의 발끝에도 못 미치는 쓰레기'라고 정말 가차없이 깐다. 덤으로 [비욘드 버스데이](%EB%B9%84%EC%9A%98%EB%93%9C%20%EB%B2%84%EC%8A%A4%EB%8D%B0%EC%9D%B4.md)는 도전의식을 인정하는 듯하면서도 은근슬쩍 비꼬는 투. 사실 L과 [미소라 나오미](%EB%AF%B8%EC%86%8C%EB%9D%BC%20%EB%82%98%EC%98%A4%EB%AF%B8.md)를 제외하면 호의적으로 묘사해준 인물이 별로 없다.
+  * `[21]` 그러나 멜로의 마지막 행동이 그 자신의 어떤 계산에서 비롯된 것인지는 분명하지 않다. "내가 할 수밖에 없다."고 말한 것 등을 보면 키라의 파멸을 위해 자신을 희생한 듯 보이기도 하지만, 멜로의 그간 행적을 보면 '니아를 위해 승리를 양보한다'거나, '키라를 어떤 정의 차원에서 반드시 잡아야 한다'고 여기는 캐릭터가 전혀 아니다. 니아는 '타카다를 통해 키라에 접근하기 위한 목적일 것'이라고 리드너에게 말했지만 확실히 알 수는 없다.
+  * `[22]` 이름을 이미 알고 있는 키요미에게 아무 생각 없이 얼굴을 보였다. 게다가 키요미가 몰래 가지고 있었던 데스노트 조각을 미처 발견하지 못했다. 애초에 본명이 일찍 드러난 상황이다 보니 언젠간 사망할 운명이긴 했다.
+  * `[23]` 지금 세간에 키라가 누구인지 밝혀도 대부분이 그의 편을 들 것이며, 그렇게 되면 니아 자신도 방치되어도 상관없는 존재가 되어버린다는 것.
+  * `[24]` 물론 데스노트가 미치는 파급력을 생각하면 애초부터 세간에 공표하거나 규명할 성질은 못 되었으나, 적어도 국가 상층부와 공모하여 정책 차원의 향후 수습은 가능했다. 실제 히구치 체포 시점까진 이런 방향으로 나아가려 했다.
+  * `[25]` 이런 지나친 행동 때문에 니아나 라이토 모두 한 때 멜로가 단순히 키라를 잡으려는 게 아니라 키라를 꺾고 그 자리를 거머쥐어 세계의 정점에 서려는 게 아닌가 여기기도 했다. 게다가 일본수사본부가 멜로와 접선했다는 이유 하나만으로 초반에 니아를 대놓고 안 믿으려 하는 등 초반의 멜로는 니아에게 있어서 전형적인 양날의 검이었다.
+  * `[26]` 스스로 '구세계의 들러리, 개죽음을 당한 베스트 드레서'라고 자조한다. 자신의 인생에 대해서도 '좋은 추억이자 나쁜 꿈이었다'는 모호한 표현을 쓰는데 스스로도 자기 인생이 만족스럽지 않었던 듯하다. 하긴 생각해 보면 작중 행적은 키라들과 비슷한 수준으로 악질적인데 행복했다고 하면 그건 그것대로 문제있다(...)
+  * `[27]` 니아는 대가리 큰 니아 새끼'(...) 키라는 '깝죽대는 살인마' 'L의 발끝에도 못 미치는 쓰레기'라고 정말 가차없이 깐다. 덤으로 [비욘드 버스데이](%EB%B9%84%EC%9A%98%EB%93%9C%20%EB%B2%84%EC%8A%A4%EB%8D%B0%EC%9D%B4.md)는 도전의식을 인정하는 듯하면서도 은근슬쩍 비꼬는 투. 사실 L과 [미소라 나오미](%EB%AF%B8%EC%86%8C%EB%9D%BC%20%EB%82%98%EC%98%A4%EB%AF%B8.md)를 제외하면 호의적으로 묘사해준 인물이 별로 없다.
 
